--- a/public/aama-standards.html
+++ b/public/aama-standards.html
@@ -129,7 +129,7 @@
                             <a><i class="fa fa-linkedin mysocial_style"></i></a>
                         </div>
                         <div class="copy-right-text">
-                            <p>Copyright © Legal Power 2015. All rights reserved. </p>
+                            <p>Copyright © Beyond Powder Coatings Ltd. 2016. All rights reserved. </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
