--- a/public/our-service-theory.html
+++ b/public/our-service-theory.html
@@ -135,7 +135,7 @@
                             <a href=""><i class="fa fa-linkedin mysocial_style"></i></a>
                         </div>
                         <div class="copy-right-text">
-                            <p>Copyright © Legal Power 2015. All rights reserved. </p>
+                            <p>Copyright © Beyond Powder Coatings Ltd. 2016. All rights reserved. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
