--- a/public/products.html
+++ b/public/products.html
@@ -140,9 +140,12 @@
                             	<div class="doenload-items">
                             		<ul>
                                 		<!-- <li><a href="">Download Brochure</a></li> -->
-                                    	<li><a href="pdfs/Epoxies.pdf" download>Download PDF</a></li>
-                                	</ul>
-                            	</div>
+                                    	<li>
+                                            <a href="pdfs/Epoxies.pdf" download>TDS Download</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <p><b>You may contact us for specific product TDS and MSDS.</b></p>
                             </div>
                             <!--End practice right single sidebar-->
                         </div>
@@ -348,7 +351,7 @@
                                         </p>
                                         <h3>Curing Condition</h3>
                                         <p>
-                                            Varies depending on the resin type for the products. For details, please refer to brief product descriptions.
+                                            Varies depending on the resin type for the products. For details, please refer to product description.
                                         </p>
                                         <h3>Average Coverage</h3>
                                         <p>
@@ -438,7 +441,7 @@
                                         </p> -->
                                         <h3>Curing Condition</h3>
                                         <p>
-                                            Varies depending on the resin type for the products. For details, please refer to brief product descriptions.
+                                            Varies depending on the resin type for the products. For details, please refer to product description.
                                         </p>
                                         <!-- <h3>Average Coverage</h3>
                                         <p>
@@ -471,7 +474,7 @@
                             <a><i class="fa fa-linkedin mysocial_style"></i></a>
                         </div>
                         <div class="copy-right-text">
-                            <p>Copyright © Legal Power 2015. All rights reserved. </p>
+                            <p>Copyright © Beyond Powder Coatings Ltd. 2016. All rights reserved. </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
