--- a/public/ral_color.html
+++ b/public/ral_color.html
@@ -26,63 +26,63 @@
         <![endif]-->
 
         <!--Start Top section-->
-                <header class="stricky anim-5-all stricky-fixed">
-                    <div class="container">
-                        <div class="logo pull-left">
-                            <a href="index.html">
-                                <img src="img/logo2.png" alt="Logo image">
-                            </a>
-                        </div>
-                        <nav class="mainmenu pull-right">
-                            <div class="nav-holder">
+        <header class="stricky anim-5-all stricky-fixed">
+            <div class="container">
+                <div class="logo pull-left">
+                    <a href="index.html">
+                        <img src="img/logo2.png" alt="Logo image">
+                    </a>
+                </div>
+                <nav class="mainmenu pull-right">
+                    <div class="nav-holder">
+                        <ul>
+                            <li><a href="index.html">HOME</a></li>
+                            <li class="dropdown">
+                                <a href="about.html">ABOUT US</a>
                                 <ul>
-                                    <li><a href="index.html">HOME</a></li>
-                                    <li class="dropdown">
-                                        <a href="about.html">ABOUT US</a>
-                                        <ul>
-                                            <li><a href="about.html">Our Mission</a></li>
-                                            <li><a href="aama-standards.html">AAMA Standards</a></li>
-                                            <li><a href="color-matching.html">COLOR MATCHING</a></li>
-                                            <li><a href="quality-control.html">QUALITY CONTROL</a></li>
-                                            <li><a href="our-service-theory.html">OUR SERVICE THEORY</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="products.html#polyester">PRODUCTS</a>
-                                        <ul class="submenu">
-                                            <li><a href="products.html#polyester">Polyester</a></li>
-                                            <li><a href="products.html#epoxies">Epoxies</a></li>
-                                            <li><a href="products.html#polyester-epoxy-hybrids">Hybrids</a></li>
-                                            <li><a href="products.html#polyurethane">Polyurethane</a></li>
-                                            <li><a href="products.html#art-style">Art Style</a></li>
-                                            <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
-                                            <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="beyond-color.html">COLOR</a>
-                                        <ul class="submenu">
-                                            <li><a href="beyond-color.html">BEYOND COLOR</a></li>
-                                            <li><a href="ral_color.html">RAL COLOR</a></li>
-                                            <li><a href="pantone_color.html">PANTONE COLOR</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="contact.html">CONTACT US</a></li>
+                                    <li><a href="about.html">Our Mission</a></li>
+                                    <li><a href="aama-standards.html">AAMA Standards</a></li>
+                                    <li><a href="color-matching.html">COLOR MATCHING</a></li>
+                                    <li><a href="quality-control.html">QUALITY CONTROL</a></li>
+                                    <li><a href="our-service-theory.html">OUR SERVICE THEORY</a></li>
                                 </ul>
-                            </div>
-                            <div class="nav-expander">
-                                <ul>
-                                    <li><button class="nav-collapser"><i class="fa fa-bars"></i></button></li>
-                                    <li><button class="header-search-toggler"><i class="icon icon-Search"></i></button></li>
+                            </li>
+                            <li class="dropdown">
+                                <a href="products.html#polyester">PRODUCTS</a>
+                                <ul class="submenu">
+                                    <li><a href="products.html#polyester">Polyester</a></li>
+                                    <li><a href="products.html#epoxies">Epoxies</a></li>
+                                    <li><a href="products.html#polyester-epoxy-hybrids">Hybrids</a></li>
+                                    <li><a href="products.html#polyurethane">Polyurethane</a></li>
+                                    <li><a href="products.html#art-style">Art Style</a></li>
+                                    <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
+                                    <li><a href="products.html#antimicrobial">Antimicrobial</a></li>
                                 </ul>
-                            </div>
-                        </nav>
-                        <div class="search-box">
-                            <input type="text" placeholder="Search Here...">
-                            <button type="submit"><i class="icon icon-Search"></i></button>
-                        </div>
+                            </li>
+                            <li class="dropdown">
+                                <a href="beyond-color.html">COLOR</a>
+                                <ul class="submenu">
+                                    <li><a href="beyond-color.html">BEYOND COLOR</a></li>
+                                    <li><a href="ral_color.html">RAL COLOR</a></li>
+                                    <li><a href="pantone_color.html">PANTONE COLOR</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="contact.html">CONTACT US</a></li>
+                        </ul>
                     </div>
-                </header>
+                    <div class="nav-expander">
+                        <ul>
+                            <li><button class="nav-collapser"><i class="fa fa-bars"></i></button></li>
+                            <li><button class="header-search-toggler"><i class="icon icon-Search"></i></button></li>
+                        </ul>
+                    </div>
+                </nav>
+                <div class="search-box">
+                    <input type="text" placeholder="Search Here...">
+                    <button type="submit"><i class="icon icon-Search"></i></button>
+                </div>
+            </div>
+        </header>
         <!--End Top section-->
 
         <!--Start Breadcrumb Text area-->
@@ -1823,7 +1823,7 @@
                             <a><i class="fa fa-linkedin mysocial_style"></i></a>
                         </div>
                         <div class="copy-right-text">
-                            <p>Copyright © Legal Power 2015. All rights reserved. </p>
+                            <p>Copyright © Beyond Powder Coatings Ltd. 2016. All rights reserved. </p>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
