--- a/public/beyond-color-old.html
+++ b/public/beyond-color-old.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
@@ -94,15 +94,15 @@
                         <p class="grid-name">P-S-WH90-52</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: rgb(236,236,231); border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
                         <p class="grid-name">P-S-WH90-RAL9003</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: rgb(231,225,210); border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
                         <p class="grid-name">P-S-WH90-RAL9001</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: rgb(240,241,234); border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
                         <p class="grid-name">P-S-WH90-RAL9016</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
@@ -321,97 +321,7 @@
                     <!-- If image -->
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <img src="img/by-chart/2794.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SM-GYCL80-2794</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/9172.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SM-GYCL60-9172</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/364.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SM-GYCL40-364</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/9138.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SM-GYCL80-9138</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/3601.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SM-BRCL30-3601</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/j026.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SM-YLCL40-J026</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/1168.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SDTM-BK10-1168</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/116.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SDTM-BR10-116</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/157.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SDT-BK30-157</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/7210.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-SDT-BK10-7210</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/1700.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-T-BK60-1700</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/367.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-T-BK60-367</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/060.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">E-V-GN30-060</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/307.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">E-V-BK50-307</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/017.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-V-BK60-017</p>
-                    </div>
-                    <!-- </div> -->
-                    <!-- If image -->
-                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <img src="img/by-chart/Copper.jpg" alt="" class="by-color-grid">
-                        <p class="grid-name">P-V-BR60-COPPER</p>
+                        <p class="grid-name"></p>
                     </div>
                 </div>
         </section>
