--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -94,15 +94,15 @@
                         <p class="grid-name">P-S-WH90-52</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: rgb(236,236,231); border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: rgb(236,236,231);"></div>
                         <p class="grid-name">P-S-WH90-RAL9003</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: rgb(231,225,210); border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: rgb(231,225,210);"></div>
                         <p class="grid-name">P-S-WH90-RAL9001</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
-                        <div class="by-color-grid" style="background: rgb(240,241,234); border: 1px solid;"></div>
+                        <div class="by-color-grid" style="background: rgb(240,241,234);"></div>
                         <p class="grid-name">P-S-WH90-RAL9016</p>
                     </div>
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
