--- a/public/products.html
+++ b/public/products.html
@@ -167,7 +167,7 @@
                                 <div class="fix practice-bottom-right-text">
                                     <h3>Physical Properties</h3>
                                     <p>
-                                        Specific gravity: 1.4 – 1.7 g/cm&sup3 <br>
+                                        Specific gravity: 1.4 – 1.6 g/cm&sup3 <br>
                                         Grain fineness distribution: 100% smaller than 100um (can be adjusted accordingly)
                                     </p>
                                     </p>
@@ -207,7 +207,7 @@
                                     <div class="fix practice-bottom-right-text">
                                         <h3>Physical Properties</h3>
                                         <p>
-                                            Specific gravity: 1.4 – 1.7 g/cm&sup3 <br>
+                                            Specific gravity: 1.4 – 1.6 g/cm&sup3 <br>
                                             Grain fineness distribution: 100% smaller than 100um (can be adjusted accordingly)
                                         </p>
                                         <h3>Curing Condition</h3>
@@ -301,7 +301,7 @@
                                     <div class="fix practice-bottom-right-text">
                                         <h3>Physical Properties</h3>
                                         <p>
-                                            Specific gravity: 1.4 – 1.7 g/cm&sup3 <br>
+                                            Specific gravity: 1.4 – 1.6 g/cm&sup3 <br>
                                             Grain fineness distribution: 100% smaller than 100um (can be adjusted accordingly)
                                         </p>
                                         <h3>Curing Condition</h3>
@@ -346,7 +346,7 @@
                                     <div class="fix practice-bottom-right-text">
                                         <h3>Physical Properties</h3>
                                         <p>
-                                            Specific gravity: 1.2 – 1.8 g/cm&sup3 <br>
+                                            Specific gravity: 1.4 -1 1.7 g/cm&sup3 <br>
                                             Grain fineness distribution: 100% smaller than 100um (can be adjusted accordingly)
                                         </p>
                                         <h3>Curing Condition</h3>
