--- a/public/pantone_color.html
+++ b/public/pantone_color.html
@@ -88,7 +88,7 @@
                     <h2><span>Pantone Color Chart</span></h2>
                 </div>
                 <div class="row">
-                    <div class="color-table">
+                    <div class="color-table" style="margin-bottom: 80px;">
                         <table>
   <tbody>
   <tr>
