--- a/public/contact.html
+++ b/public/contact.html
@@ -120,7 +120,9 @@
                                 <p>
                                     5421 McLuhan End NW, <br>
                                     Edmonton AB, Canada, T6R 0P8 <br>
-                                    Phone: +1 780-243-6277
+                                    Phone:<br>
+                                    Steven - +1 780-243-6277 <br>
+                                    Lucy - +1 780-991-7883
                                 </p>
                                 <p>
                                     E-mail: bpowdercoatings@gmail.com <br>
