--- a/public/index.html
+++ b/public/index.html
@@ -113,9 +113,11 @@
                             data-x="0"
                             data-y="0"
                             >
-                                <h1>BY POWDERS <br> <b>Meet</b> <br> <b>AAMA</b> Standards </h1>
-                                <br>
-                                <a href="aama-standards.html" class="btn btn-lg btn-d">LEARN MORE</a>
+                                <div class="slider-inner-container">
+                                    <h1>BEYOND POWDERS<br><span class="bold">Meet</span><br><span class="bold">AAMA</span class="bold"> Standards</h1>
+                                    <br>
+                                    <a href="aama-standards.html" class="btn btn-lg btn-d">LEARN MORE</a>
+                                </div>
                             </div>
 
                         </li>
@@ -137,10 +139,10 @@
                             data-x="0"
                             data-y="0"
                             >
-                                <h1>Make Every <br>
-                                <b>SELECTION</b> Count </h1>
-                                <br>
-                                <a href="color-matching.html" class="btn btn-lg btn-d">LEARN MORE</a>
+                                <div class="slider-inner-container"><h1>Make Every<br>
+                                                                <span class="bold">SELECTION</span> Count </h1>
+                                                                <br>
+                                                                <a href="color-matching.html" class="btn btn-lg btn-d">LEARN MORE</a></div>
                             </div>
 
                         </li>
@@ -162,10 +164,10 @@
                             data-x="0"
                             data-y="0"
                             >
-                                <h1><b>QUALITY CONTROL</b> <br>
-                                Is the Key <br> to <b>SUCCESS</b> </h1>
-                                <br>
-                                <a href="quality-control.html" class="btn btn-lg btn-d">LEARN MORE</a>
+                                <div class="slider-inner-container">
+                                    <h1><span class="bold">QUALITY CONTROL</span><br>Is the Key<br>to<span class="bold">SUCCESS</span></h1><br>
+                                    <a href="quality-control.html" class="btn btn-lg btn-d">LEARN MORE</a>
+                                </div>
                             </div>
 
                         </li>
@@ -187,10 +189,9 @@
                             data-x="0"
                             data-y="0"
                             >
-                                <h1><b>SERVICE</b> <br>
-                                Will Solve All <br>of Your Troubles</h1>
-                                <br>
-                                <a href="our-service-theory.html" class="btn btn-lg btn-d">LEARN MORE</a>
+                                <div class="slider-inner-container"><h1><span class="bold">SERVICE</span><br>Will Solve All<br>of Your Troubles</h1>
+                                                                <br>
+                                                                <a href="our-service-theory.html" class="btn btn-lg btn-d">LEARN MORE</a></div>
                             </div>
 
                         </li>
