--- a/public/index.html
+++ b/public/index.html
@@ -218,17 +218,10 @@
                                 <span style="font-size:20px;">W</span>e also provide many types of surface appearance finishes, including Smooth, Texture, Sand Texture, River Texture, Silk Texture, Marbling Texture, Metallic, and Hammer Tone etc.
                                    We take a lot of pride in our product not only because of the superior quality but also the price and service that we offer.
                                    We treat customer needs as our first priority, your feedback is valuable and important to us. Beyond Powder Coatings truly appreciate the opportunity to serve our customers. </p>
+                                <p>
+                                    <span style="font-size:20px;">W</span>e are able to conduct a series of in-house powder coating performance testing which including but not limiting to accelerated corrosion and weathering test. This would insure the quality and durability of our powder coatings. We are committed to provide perfect matching to an existing product, to manufacture the exactly defined powder coating that our customer requires. We trade equality to our customers despite the company sizes; whether your need 500 kg a week or 40kg a month, Beyond Powder Coatings is always here to help.
+                                </p>
 							</div>
-							<!-- <div class="fix civil-titigation">
-                            	<div class="fix civil-img-holder alignleft">
-                                	<img src="img/civil.jpg" alt="">
-                                </div>
-                                <div class="fix civil-text">
-                                	<h4>civil litigation</h4>
-                                    <p>Lorem ipsum dolor sit amet, cons ectetur elit. Vesti bulum nec odios Suspe ndisse cursus.</p>
-                                    <a href="">read more</a>
-                                </div>
-                            </div> -->
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -253,15 +246,6 @@
                                 <li>Chemical resistance coatings</li>
                             </ul>
                             <!-- <a href="">read more</a> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                        <div class="welcome-attorney">
-                            <div class="welcome-text">
-                               <p><span style="font-size:20px;">W</span>e are able to conduct a series of in-house powder coating performance testing which including but not limiting to accelerated corrosion and weathering test. This would insure the quality and durability of our powder coatings. We are committed to provide perfect matching to an existing product, to manufacture the exactly defined powder coating that our customer requires. We trade equality to our customers despite the company sizes; whether your need 500 kg a week or 40kg a month, Beyond Powder Coatings is always here to help. </p>
-                            </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
