--- a/public/products.html
+++ b/public/products.html
@@ -89,7 +89,7 @@
 		<section id="practice-v5-area">
         	<div class="container">
             	<div class="row">
-                	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 small-hide">
                     	<div class="practice-right-sidebar">
                         	<!--Start practice right single sidebar-->
                         	<div class="practice-right-single-sidebar">
@@ -184,7 +184,7 @@
                             </div>
                             <div class="fix right-content-contact-box">
                                 <h4>Test Performance</h3>
-                                <img src="img/products/polyester.png">
+                                <img src="img/products/polyester.jpg">
                             </div>
                         </div>
                         <div class="practice-left-content tab-pane fade" id="Accident">
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="fix right-content-contact-box">
                                     <h4>Test Performance</h3>
-                                    <img src="img/products/epoxies.png">
+                                    <img src="img/products/epoxies.jpg">
                                 </div>
                             </div>
                         </div>
@@ -272,7 +272,7 @@
                                 </div>
                                 <div class="fix right-content-contact-box">
                                     <h4>Test Performance</h3>
-                                    <img src="img/products/e-p.png">
+                                    <img src="img/products/e-p.jpg">
                                 </div>
                             </div>
                         </div>
@@ -317,7 +317,7 @@
                                 </div>
                                 <div class="fix right-content-contact-box">
                                     <h4>Test Performance</h3>
-                                    <img src="img/products/polyurethane.png">
+                                    <img src="img/products/polyurethane.jpg">
                                 </div>
                             </div>
                         </div>
@@ -362,7 +362,7 @@
                                 </div>
                                 <div class="fix right-content-contact-box">
                                     <h4>Test Performance</h3>
-                                    <img src="img/products/art-style.png">
+                                    <img src="img/products/art-style.jpg">
                                 </div>
                             </div>
                         </div>
@@ -407,7 +407,7 @@
                                 </div>
                                 <div class="fix right-content-contact-box">
                                     <h4>Test Performance</h3>
-                                    <img src="img/products/high-t.png">
+                                    <img src="img/products/high-t.jpg">
                                 </div>
                             </div>
                         </div>
@@ -452,7 +452,7 @@
                                 </div>
                                 <div class="fix right-content-contact-box">
                                     <h4>Test Performance</h3>
-                                    <img src="img/products/anti.png">
+                                    <img src="img/products/anti.jpg">
                                 </div>
                             </div>
                         </div>
