--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
                             data-y="0"
                             >
                                 <div class="slider-inner-container">
-                                    <h1><span class="bold">QUALITY CONTROL</span><br>Is the Key<br>to<span class="bold">SUCCESS</span></h1><br>
+                                    <h1><span class="bold">QUALITY CONTROL</span><br>Is the Key<br>to <span class="bold">SUCCESS</span></h1><br>
                                     <a href="quality-control.html" class="btn btn-lg btn-d">LEARN MORE</a>
                                 </div>
                             </div>
@@ -189,7 +189,7 @@
                             data-x="0"
                             data-y="0"
                             >
-                                <div class="slider-inner-container"><h1><span class="bold">SERVICE</span><br>Will Solve All<br>of Your Troubles</h1>
+                                <div class="slider-inner-container"><h1><span class="bold">OUR SERVICE</span><br>Will Solve All<br>of Your Troubles</h1>
                                                                 <br>
                                                                 <a href="our-service-theory.html" class="btn btn-lg btn-d">LEARN MORE</a></div>
                             </div>
