--- a/public/index.html
+++ b/public/index.html
@@ -189,11 +189,11 @@
                             data-x="0"
                             data-y="0"
                             >
-                                <div class="slider-inner-container"><h1><span class="bold">OUR SERVICE</span><br>Will Solve All<br>of Your Troubles</h1>
-                                                                <br>
-                                                                <a href="our-service-theory.html" class="btn btn-lg btn-d">LEARN MORE</a></div>
+                                <div class="slider-inner-container">
+                                    <h1><span class="bold">OUR SERVICE</span><br>Will Solve<br>All of Your Troubles</h1><br>
+                                    <a href="our-service-theory.html" class="btn btn-lg btn-d">LEARN MORE</a>
+                                </div>
                             </div>
-
                         </li>
                     </ul>
                 </div>
