--- a/public/products.html
+++ b/public/products.html
@@ -138,10 +138,10 @@
                             		<h3><span>Download Docs</span></h3>
                             	</div>
                             	<div class="doenload-items">
-                            		<ul>
+                            		<ul id="download-container">
                                 		<!-- <li><a href="">Download Brochure</a></li> -->
                                     	<li>
-                                            <a href="pdfs/Epoxies.pdf" download>TDS Download</a>
+                                            <a href="" id="pdf-download" download>TDS Download</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -505,15 +505,25 @@
                 var productName = location.hash;
                 productName = productName.replace('#', '');
                 if(!productName) productName = 'polyester';
-                console.log(productName);
+                // console.log(productName);
                 var leftNavTab = document.getElementsByClassName(productName)[0];
-                console.log(leftNavTab);
+                // console.log(leftNavTab);
                 leftNavTab.click(function(event) {
                     /* Act on the event */
                 });
+                var arr = ["epoxies", "polyester-epoxy-hybrids", "polyester", "polyurethane"]
+                if (arr.indexOf(productName) != -1) {
+                    console.log( productName );
+                    link = "pdfs/"+productName+".pdf";
+                    $("#pdf-download").attr("href", link);
+                } else {
+                    console.log( productName );
+                    $("#download-container").hide();
+                }
             };
 
             getProductName();
+
 
             window.onhashchange = function() {
                 getProductName();
